# LeaveDetails

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  run.bat
LeaveDetails/: asgi.py  db.sqlite3  run.bat.bak  settings.py  urls.py  wsgi.py
LeaveDetails/LeaveDetails/: settings.py  urls.py  wsgi.py
LeaveDetails/static/: cal.css
LeaveDetails/users/: forms.py  managers.py  signals.py  verifier.py
LeaveDetails/users/migrations/: 0001_initial.py  0003_customuser_ccl_left.py  0005_alter_customuser_ccl_left.py  0006_alter_customuser_ccl_left.py  0007_alter_customuser_ccl_left.py  0009_holidays.py  0010_alter_customuser_sid.py
LeaveDetails/users/templates/users/: delete_leave.html  holiday_delete.html  homebase.html  login.html  password_reset.html  profile.html  profile_edit.html  register.html  search_sid.html  test.html
static/: cal.css  cal.js  login.css
users/: admin.py  forms.py  models.py  signals.py  urls.py  verifier.py  views.py
users/migrations/: 0002_sls_cls_ccls.py  0004_alter_customuser_ccl_left_profile.py  0008_alter_profile_ccl_left.py  0011_ccls_half_cls_half_profile_epl_left_profile_ssl_left_and_more.py  0012_epls.py
users/templates/users/: add_leave.html  base.html  delete_leave.html  holiday_delete.html  home.html  homebase.html  login.html  password_reset_confirm.html  profile.html  profile_edit.html  view_self.html
