[tool.poetry]
name = "leavedetails"
version = "0.1.0"
description = ""
authors = ["Vignesh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
